syntax = "proto3";

package services;

option go_package="github.com/elem1092/services";

service CRUDService {
  rpc SavePost(SavePostDTO) returns (PostDTO);
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
  rpc DeletePost(DeleteRequest) returns (ErrorResponse);
  rpc UpdatePost(UpdatePostDTO) returns (ErrorResponse);
}

message GetPostsRequest {
  int32 id = 1;
  enum IdType {
    POST_ID = 0;
    USER_ID = 1;
    ALL = 2;
  }
  IdType needed = 2;
}

message GetPostsResponse {
  repeated PostDTO posts = 1;
}

message ContentDTO {
  string title = 1;
  string body = 2;
}

message PostDTO {
  int32 id = 1;
  int32 user_id = 2;
  ContentDTO content = 3;
}

message SavePostDTO {
  int32 user_id = 1;
  ContentDTO content = 2;
}

message UpdatePostDTO {
  int32 id = 1;
  ContentDTO content = 2;
}

message DeleteRequest {
  int32 id = 1;
}

message ErrorResponse {
  string error = 1;
}
